--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -22,7 +22,7 @@ click==8.0.1
     # via
     #   black
     #   pip-tools
-coverage==5.5
+coverage[toml]==5.5
     # via pytest-cov
 decorator==5.0.9
     # via ipython
@@ -104,11 +104,11 @@ pylint==2.8.2
     #   pylint-plugin-utils
 pyparsing==2.4.7
     # via packaging
-pytest-cov==2.12.1
+pytest-cov==3.0.0
     # via -r requirements-dev.in
-pytest-django==4.4.0
+pytest-django==4.5.1
     # via -r requirements-dev.in
-pytest==6.2.4
+pytest==6.2.5
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -130,11 +130,11 @@ text-unidecode==1.3
 toml==0.10.2
     # via
     #   black
+    #   coverage
     #   pep517
     #   pre-commit
     #   pylint
     #   pytest
-    #   pytest-cov
 traitlets==5.0.5
     # via
     #   ipython
