--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ django-helusers==0.7.0
     # via -r requirements.in
 django-oikotie @ git+https://github.com/City-of-Helsinki/django-oikotie@v0.2.0
     # via -r requirements.in
-django-pgcrypto-fields==2.6.0
+django-pgcrypto-fields @ git+https://github.com/incuna/django-pgcrypto-fields@5b4b8eed3f9636ba3331f26e41a639fe4bee9247
     # via -r requirements.in
 django-simple-history==3.0.0
     # via -r requirements.in
