--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,16 +5,16 @@
 #    pip-compile requirements-dev.in
 #
 appdirs==1.4.4
-    # via
-    #   black
-    #   virtualenv
+    # via virtualenv
+appnope==0.1.3
+    # via ipython
 astroid==2.5.6
     # via pylint
 attrs==21.2.0
     # via pytest
 backcall==0.2.0
     # via ipython
-black==21.5b2
+black==22.3.0
     # via -r requirements-dev.in
 cfgv==3.3.0
     # via pre-commit
@@ -70,7 +70,7 @@ packaging==21.0
     #   pytest
 parso==0.8.2
     # via jedi
-pathspec==0.8.1
+pathspec==0.9.0
     # via black
 pep517==0.10.0
     # via pip-tools
@@ -80,6 +80,8 @@ pickleshare==0.7.5
     # via ipython
 pip-tools==6.5.1
     # via -r requirements-dev.in
+platformdirs==2.5.2
+    # via black
 pluggy==0.13.1
     # via pytest
 pre-commit==2.13.0
@@ -121,8 +123,6 @@ python-dateutil==2.8.2
     #   faker
 pyyaml==5.4.1
     # via pre-commit
-regex==2021.4.4
-    # via black
 six==1.16.0
     # via
     #   python-dateutil
@@ -131,18 +131,21 @@ text-unidecode==1.3
     # via faker
 toml==0.10.2
     # via
-    #   black
     #   coverage
     #   pep517
     #   pre-commit
     #   pylint
     #   pytest
+tomli==2.0.1
+    # via black
 traitlets==5.0.5
     # via
     #   ipython
     #   matplotlib-inline
 typing-extensions==4.1.1
-    # via django-test-migrations
+    # via
+    #   black
+    #   django-test-migrations
 virtualenv==20.4.7
     # via pre-commit
 wcwidth==0.2.5
