--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ attrs==21.2.0
     # via jsonschema
 authlib==0.15.4
     # via drf-oidc-auth
+bcrypt==3.2.0
+    # via paramiko
 cachetools==4.2.2
     # via django-helusers
 certifi==2021.5.30
@@ -18,13 +20,17 @@ certifi==2021.5.30
     #   requests
     #   sentry-sdk
 cffi==1.14.6
-    # via cryptography
+    # via
+    #   bcrypt
+    #   cryptography
+    #   pynacl
 charset-normalizer==2.0.4
     # via requests
 cryptography==3.4.8
     # via
     #   authlib
     #   drf-oidc-auth
+    #   paramiko
     #   social-auth-core
 defusedxml==0.7.1
     # via
@@ -104,6 +110,8 @@ packaging==21.0
     # via
     #   deprecation
     #   pikepdf
+paramiko==2.10.3
+    # via -r requirements.in
 pikepdf==5.0.0
     # via -r requirements.in
 pillow==9.0.1
@@ -120,6 +128,8 @@ pyjwt==2.1.0
     # via
     #   djangorestframework-simplejwt
     #   social-auth-core
+pynacl==1.5.0
+    # via paramiko
 pyparsing==2.4.7
     # via packaging
 pyrsistent==0.18.0
@@ -150,9 +160,11 @@ sentry-sdk==1.3.1
     # via -r requirements.in
 six==1.16.0
     # via
+    #   bcrypt
     #   ecdsa
     #   elasticsearch-dsl
     #   jsonschema
+    #   paramiko
     #   python-dateutil
 social-auth-app-django==5.0.0
     # via -r requirements.in
