--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -38,6 +38,8 @@ filelock==3.0.12
     # via virtualenv
 flake8==3.9.2
     # via -r requirements-dev.in
+freezegun==1.2.2
+    # via pytest-freezegun
 identify==2.2.10
     # via pre-commit
 iniconfig==1.1.1
@@ -113,14 +115,18 @@ pytest==6.2.5
     #   -r requirements-dev.in
     #   pytest-cov
     #   pytest-django
+    #   pytest-freezegun
 pytest-cov==3.0.0
     # via -r requirements-dev.in
 pytest-django==4.5.1
+    # via -r requirements-dev.in
+pytest-freezegun==0.4.2
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via
     #   -r requirements-dev.in
     #   faker
+    #   freezegun
 pyyaml==5.4.1
     # via pre-commit
 six==1.16.0
