--- a/requirements.in
+++ b/requirements.in
@@ -13,6 +13,7 @@ drf-oidc-auth~=2.0.0
 drf-spectacular~=0.18.2
 elasticsearch~=7.14.0
 elasticsearch-dsl>=7.0.0,<8.0.0
+Faker~=8.6.0
 hashids~=1.3.1
 psycopg2~=2.9.1
 python-stdnum~=1.17
