--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,8 @@ elasticsearch==7.14.0
     #   elasticsearch-dsl
 elasticsearch-dsl==7.4.0
     # via -r requirements.in
+faker==8.6.0
+    # via -r requirements.in
 hashids==1.3.1
     # via -r requirements.in
 idna==3.2
@@ -135,7 +137,9 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
     # via jsonschema
 python-dateutil==2.8.2
-    # via elasticsearch-dsl
+    # via
+    #   elasticsearch-dsl
+    #   faker
 python-jose==3.3.0
     # via django-helusers
 python-stdnum==1.17
@@ -172,6 +176,8 @@ social-auth-core==4.1.0
     # via social-auth-app-django
 sqlparse==0.4.2
     # via django
+text-unidecode==1.3
+    # via faker
 uritemplate==3.0.1
     # via drf-spectacular
 urllib3==1.26.6
