--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,80 +4,80 @@
 #
 #    pip-compile --resolver=backtracking requirements-dev.in
 #
-appdirs==1.4.4
-    # via virtualenv
-astroid==2.5.6
+astroid==2.15.5
     # via pylint
-attrs==21.2.0
-    # via
-    #   -c requirements.txt
-    #   pytest
+asttokens==2.2.1
+    # via stack-data
 backcall==0.2.0
     # via ipython
 black==22.3.0
     # via -r requirements-dev.in
 build==0.10.0
     # via pip-tools
-cfgv==3.3.0
+cfgv==3.3.1
     # via pre-commit
-click==8.0.1
+click==8.1.3
     # via
     #   black
     #   pip-tools
-coverage[toml]==5.5
+coverage[toml]==7.2.7
     # via pytest-cov
-decorator==5.0.9
+decorator==5.1.1
     # via ipython
-distlib==0.3.2
+dill==0.3.6
+    # via pylint
+distlib==0.3.6
     # via virtualenv
-django-test-migrations==1.2.0
+django-test-migrations==1.3.0
     # via -r requirements-dev.in
-factory-boy==3.2.0
+exceptiongroup==1.1.1
+    # via pytest
+executing==1.2.0
+    # via stack-data
+factory-boy==3.2.1
     # via -r requirements-dev.in
 faker==8.6.0
     # via
     #   -c requirements.txt
     #   factory-boy
-filelock==3.0.12
+filelock==3.12.0
     # via virtualenv
-flake8==3.9.2
+flake8==6.0.0
     # via -r requirements-dev.in
 freezegun==1.2.2
     # via pytest-freezegun
-identify==2.2.10
+identify==2.5.24
     # via pre-commit
-iniconfig==1.1.1
+iniconfig==2.0.0
     # via pytest
-ipython==7.31.1
+ipython==8.12.2
     # via -r requirements-dev.in
-ipython-genutils==0.2.0
-    # via traitlets
-isort==5.8.0
+isort==5.12.0
     # via
     #   -r requirements-dev.in
     #   pylint
-jedi==0.18.0
+jedi==0.18.2
     # via ipython
-lazy-object-proxy==1.6.0
+lazy-object-proxy==1.9.0
     # via astroid
-matplotlib-inline==0.1.2
+matplotlib-inline==0.1.6
     # via ipython
-mccabe==0.6.1
+mccabe==0.7.0
     # via
     #   flake8
     #   pylint
-mypy-extensions==0.4.3
+mypy-extensions==1.0.0
     # via black
-nodeenv==1.6.0
+nodeenv==1.8.0
     # via pre-commit
 packaging==21.0
     # via
     #   -r requirements-dev.in
     #   build
     #   pytest
-parso==0.8.2
+parso==0.8.3
     # via jedi
-pathspec==0.9.0
+pathspec==0.11.1
     # via black
 pexpect==4.8.0
     # via ipython
@@ -85,31 +85,34 @@ pickleshare==0.7.5
     # via ipython
 pip-tools==6.13.0
     # via -r requirements-dev.in
-platformdirs==2.5.2
-    # via black
-pluggy==0.13.1
+platformdirs==3.5.1
+    # via
+    #   black
+    #   pylint
+    #   virtualenv
+pluggy==1.0.0
     # via pytest
-pre-commit==2.13.0
+pre-commit==3.3.2
     # via -r requirements-dev.in
-prompt-toolkit==3.0.18
+prompt-toolkit==3.0.38
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
-py==1.10.0
-    # via pytest
-pycodestyle==2.7.0
+pure-eval==0.2.2
+    # via stack-data
+pycodestyle==2.10.0
     # via flake8
-pyflakes==2.3.1
+pyflakes==3.0.1
     # via flake8
-pygments==2.9.0
+pygments==2.15.1
     # via ipython
-pylint==2.8.2
+pylint==2.17.4
     # via
     #   pylint-django
     #   pylint-plugin-utils
-pylint-django==2.4.4
+pylint-django==2.5.3
     # via -r requirements-dev.in
-pylint-plugin-utils==0.6
+pylint-plugin-utils==0.8.2
     # via pylint-django
 pyparsing==2.4.7
     # via
@@ -117,15 +120,15 @@ pyparsing==2.4.7
     #   packaging
 pyproject-hooks==1.0.0
     # via build
-pytest==6.2.5
+pytest==7.3.1
     # via
     #   -r requirements-dev.in
     #   pytest-cov
     #   pytest-django
     #   pytest-freezegun
-pytest-cov==3.0.0
+pytest-cov==4.1.0
     # via -r requirements-dev.in
-pytest-django==4.5.1
+pytest-django==4.5.2
     # via -r requirements-dev.in
 pytest-freezegun==0.4.2
     # via -r requirements-dev.in
@@ -141,38 +144,42 @@ pyyaml==5.4.1
 six==1.16.0
     # via
     #   -c requirements.txt
+    #   asttokens
     #   python-dateutil
-    #   virtualenv
+stack-data==0.6.2
+    # via ipython
 text-unidecode==1.3
     # via
     #   -c requirements.txt
     #   faker
-toml==0.10.2
-    # via
-    #   coverage
-    #   pre-commit
-    #   pylint
-    #   pytest
 tomli==2.0.1
     # via
     #   black
     #   build
+    #   coverage
+    #   pylint
     #   pyproject-hooks
-traitlets==5.0.5
+    #   pytest
+tomlkit==0.11.8
+    # via pylint
+traitlets==5.9.0
     # via
     #   ipython
     #   matplotlib-inline
-typing-extensions==4.1.1
+typing-extensions==4.6.2
     # via
+    #   astroid
     #   black
     #   django-test-migrations
-virtualenv==20.4.7
+    #   ipython
+    #   pylint
+virtualenv==20.23.0
     # via pre-commit
-wcwidth==0.2.5
+wcwidth==0.2.6
     # via prompt-toolkit
-wheel==0.37.1
+wheel==0.40.0
     # via pip-tools
-wrapt==1.12.1
+wrapt==1.15.0
     # via astroid
 
 # The following packages are considered to be unsafe in a requirements file:
