--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -75,6 +75,7 @@ packaging==21.0
     #   -r requirements-dev.in
     #   build
     #   pytest
+    #   pytest-sugar
 parso==0.8.3
     # via jedi
 pathspec==0.11.1
@@ -126,11 +127,14 @@ pytest==7.3.1
     #   pytest-cov
     #   pytest-django
     #   pytest-freezegun
+    #   pytest-sugar
 pytest-cov==4.1.0
     # via -r requirements-dev.in
 pytest-django==4.5.2
     # via -r requirements-dev.in
 pytest-freezegun==0.4.2
+    # via -r requirements-dev.in
+pytest-sugar==0.9.6
     # via -r requirements-dev.in
 python-dateutil==2.8.2
     # via
@@ -148,6 +152,8 @@ six==1.16.0
     #   python-dateutil
 stack-data==0.6.2
     # via ipython
+termcolor==2.3.0
+    # via pytest-sugar
 text-unidecode==1.3
     # via
     #   -c requirements.txt
