--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,8 @@
 exclude = migrations
 max-line-length = 88
 max-complexity = 10
+per-file-ignores =
+    application_form/tests/test_pdf_haso.py:E501
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = apartment_application_service.tests.settings
