--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -6,8 +6,7 @@ trigger:
   batch: true
   branches:
     include:
-    - release/*
-    - refs/tags/*
+    - refs/tags/release-*
   paths:
     exclude:
     - README.md
