--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,6 +141,11 @@ jobs:
           flake8
           isort . --check-only --diff
 
+      - name: Check requirements files
+        if: ${{ matrix.python == '3.8' }}
+        run: |
+          ./check-requirements-files
+
       - name: Run tests
         run: |
           pytest -ra -vvv --doctest-modules --cov=.
