--- a/requirements.in
+++ b/requirements.in
@@ -20,6 +20,6 @@ python-stdnum~=1.17
 sentry-sdk~=1.3.0
 social-auth-app-django~=5.0.0
 whitenoise~=5.3.0
-pikepdf~=5.0.0
+pikepdf
 num2words~=0.5.10
 paramiko~=2.10.3
