--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,9 @@ defusedxml==0.7.1
     #   python3-openid
     #   social-auth-core
 deprecation==2.1.0
-    # via django-helusers
+    # via
+    #   django-helusers
+    #   pikepdf
 django==3.2.15
     # via
     #   -r requirements.in
@@ -114,7 +116,7 @@ packaging==21.0
     #   pikepdf
 paramiko==2.10.3
     # via -r requirements.in
-pikepdf==5.0.0
+pikepdf==5.6.1
     # via -r requirements.in
 pillow==10.0.1
     # via pikepdf
