--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
+          cache: 'pip'
+          cache-dependency-path: requirements*.txt
 
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
