--- a/requirements.in
+++ b/requirements.in
@@ -17,7 +17,7 @@ Faker~=8.6.0
 hashids~=1.3.1
 psycopg2~=2.9.1
 python-stdnum~=1.17
-sentry-sdk~=1.3.0
+sentry-sdk
 social-auth-app-django~=5.0.0
 whitenoise~=5.3.0
 pikepdf
