Enable django_extensions on DEBUG mode
Add django-extensions to requirements-dev and add it to INSTALLED_APPS
when DEBUG is enabled and the module is installed.

Most importantly (for me at least) this allows using the very useful
`manage.py shell_plus` command on the local development environment.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,12 +4,20 @@
 #
 #    pip-compile --strip-extras requirements-dev.in
 #
+asgiref==3.7.2
+    # via
+    #   -c requirements.txt
+    #   django
 astroid==2.15.8
     # via pylint
 asttokens==2.4.0
     # via stack-data
 backcall==0.2.0
     # via ipython
+backports-zoneinfo==0.2.1
+    # via
+    #   -c requirements.txt
+    #   django
 black==22.3.0
     # via -r requirements-dev.in
 build==1.0.3
@@ -28,6 +36,12 @@ dill==0.3.7
     # via pylint
 distlib==0.3.7
     # via virtualenv
+django==4.2.6
+    # via
+    #   -c requirements.txt
+    #   django-extensions
+django-extensions==3.2.3
+    # via -r requirements-dev.in
 django-test-migrations==1.3.0
     # via -r requirements-dev.in
 exceptiongroup==1.1.3
@@ -149,6 +163,10 @@ six==1.16.0
     #   -c requirements.txt
     #   asttokens
     #   python-dateutil
+sqlparse==0.4.4
+    # via
+    #   -c requirements.txt
+    #   django
 stack-data==0.6.3
     # via ipython
 termcolor==2.3.0
@@ -175,6 +193,7 @@ traitlets==5.11.2
 typing-extensions==4.8.0
     # via
     #   -c requirements.txt
+    #   asgiref
     #   astroid
     #   black
     #   django-test-migrations
