--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,18 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  check-requirements:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+          cache: 'pip'
+          cache-dependency-path: requirements-dev.txt
+      - run: pip install -r requirements-dev.txt
+      - run: ./check-requirements-files
+
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -142,12 +154,6 @@ jobs:
           black --check .
           flake8
           isort . --check-only --diff
-
-      # TODO temporarily disabled
-      # - name: Check requirements files
-      #   if: ${{ matrix.python == '3.8' }}
-      #   run: |
-      #     ./check-requirements-files
 
       - name: Run tests
         run: |
