--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,7 +29,9 @@ click==8.1.7
     #   black
     #   pip-tools
 coverage==7.3.2
-    # via pytest-cov
+    # via
+    #   -r requirements-dev.in
+    #   pytest-cov
 decorator==5.1.1
     # via ipython
 dill==0.3.7
