--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ attrs==23.1.0
     #   referencing
 authlib==1.2.1
     # via drf-oidc-auth
+backports-zoneinfo==0.2.1
+    # via django
 bcrypt==4.0.1
     # via paramiko
 cachetools==5.3.1
@@ -97,6 +99,10 @@ hashids==1.3.1
     # via -r requirements.in
 idna==3.4
     # via requests
+importlib-resources==6.1.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 inflection==0.5.1
     # via drf-spectacular
 jsonschema==4.19.1
@@ -124,6 +130,8 @@ pikepdf==8.5.0
     # via -r requirements.in
 pillow==10.0.1
     # via pikepdf
+pkgutil-resolve-name==1.3.10
+    # via jsonschema
 psycopg2==2.9.9
     # via -r requirements.in
 pyasn1==0.5.0
@@ -185,6 +193,8 @@ sqlparse==0.4.4
     # via django
 text-unidecode==1.3
     # via faker
+typing-extensions==4.8.0
+    # via asgiref
 uritemplate==4.1.1
     # via drf-spectacular
 urllib3==1.26.18
@@ -194,3 +204,5 @@ urllib3==1.26.18
     #   sentry-sdk
 whitenoise==6.5.0
     # via -r requirements.in
+zipp==3.17.0
+    # via importlib-resources
