--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,8 +79,11 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  check-requirements:
+  check:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        part: [requirements, style, lint, migrations]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -88,8 +91,35 @@ jobs:
           python-version: '3.8'
           cache: 'pip'
           cache-dependency-path: requirements-dev.txt
-      - run: pip install -r requirements-dev.txt
-      - run: ./check-requirements-files
+
+      - name: Install app requirements
+        run: pip install -r requirements.txt
+        if: ${{ matrix.part == 'migrations' }}
+
+      - name: Install development tools
+        run: pip install -r requirements-dev.txt
+
+      - name: Check requirements files
+        if: ${{ matrix.part == 'requirements' }}
+        run: ./check-requirements-files
+
+      - name: Check code style
+        if: ${{ matrix.part == 'style' }}
+        run: black --check .
+
+      - name: Linting
+        if: ${{ matrix.part == 'lint' }}
+        run: |
+          flake8
+          isort . --check-only --diff
+
+      - name: Check migrations
+        if: ${{ matrix.part == 'migrations' }}
+        env:
+          DATABASE_URL: "sqlite:///"
+        run: |
+          ./manage.py makemigrations --no-input --dry-run
+          ./manage.py makemigrations --no-input --check
 
   build:
     runs-on: ubuntu-latest
@@ -110,10 +140,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
           cache: 'pip'
@@ -147,16 +177,9 @@ jobs:
           node port: 9300
           discovery type: 'single-node'
 
-      - name: Check and run migrations
+      - name: Run migrations
         run: |
-          python manage.py makemigrations --dry-run --check
-          python manage.py migrate
-
-      - name: Run black, flake8 and isort
-        run: |
-          black --check .
-          flake8
-          isort . --check-only --diff
+          ./manage.py migrate
 
       - name: Run tests
         run: |
