--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,6 @@
-Django
+Django<5
 django-cors-headers
-django-enumfields
+django-enumfields2
 django-environ
 django-etuovi
 django-oikotie
@@ -11,10 +11,10 @@ djangorestframework
 djangorestframework-simplejwt
 drf-oidc-auth
 drf-spectacular
-elasticsearch~=7.14.0
+elasticsearch
 elasticsearch-dsl>=7.0.0,<8.0.0
-Faker~=8.6.0
-hashids~=1.3.1
+Faker
+hashids
 psycopg2
 python-stdnum
 sentry-sdk
