--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ max-line-length = 88
 max-complexity = 10
 per-file-ignores =
     application_form/tests/test_pdf_haso.py:E501
+    application_form/tests/test_pdf_hitas.py:E501
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = apartment_application_service.tests.settings
