--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
           python-version: '3.8'
           cache: 'pip'
           cache-dependency-path: requirements-dev.txt
-
+  
       - name: Install app requirements
         run: pip install -r requirements.txt
         if: ${{ matrix.part == 'migrations' }}
@@ -148,7 +148,10 @@ jobs:
           python-version: ${{ matrix.python }}
           cache: 'pip'
           cache-dependency-path: requirements*.txt
-
+       
+      - name: Update apt packages
+        run: sudo apt-get update
+        
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
 
