--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,11 @@ EMAIL_URL=consolemail://
 MAILER_LOCK_PATH=
 
 # django-helusers
-OIDC_AUDIENCE=asuntotuotanto-api-dev
-OIDC_API_SCOPE_PREFIX=
+OIDC_AUDIENCE=https://api.hel.fi/auth/asuntotuotantoapidev,asuntotuotanto-api-dev
+OIDC_API_SCOPE_PREFIX=access
 OIDC_REQUIRE_API_SCOPE_FOR_AUTHENTICATION=False
-OIDC_ISSUER=https://tunnistus.test.hel.ninja/auth/realms/helsinki-tunnistus
+OIDC_ISSUER=https://tunnistamo.test.hel.ninja/openid,https://tunnistus.test.hel.ninja/auth/realms/helsinki-tunnistus
+OIDC_API_AUTHORIZATION_FIELD=authorization.permissions.scopes
 HELUSERS_BACK_CHANNEL_LOGOUT_ENABLED=True
 
 SOCIAL_AUTH_TUNNISTAMO_KEY=
